# jubilant-adventure

./: Cargo.toml  README.md
adventurous_frontend/: .gitignore  Cargo.toml  index.html
adventurous_frontend/src/: main.rs
adventurous_frontend/static/: index.css
blog_backend/: .env  Cargo.toml  docker-compose.yml
blog_backend/migrations/: 20220902120600_blog.sql
blog_backend/src/: crud.rs  lib.rs
blog_frontend/: Cargo.toml
blog_frontend/src/: lib.rs  post.rs  stream.rs
blog_model/: Cargo.toml
blog_model/src/: lib.rs
jubilant_backend/: Cargo.toml
jubilant_backend/src/: main.rs
