[package]
name = "adventurous-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.133"
serde_json = "1.0.74"
sycamore = {version = "0.8.0", features = ["ssr"]}
reqwasm = "0.3.1"
pulldown-cmark = "0.9"
blog_frontend = {path = "../blog_frontend"}
web-sys = {version = "0.3.55", features = [
        "InputEvent", 
        "KeyboardEvent",
        "Location",
        "Storage",
        "HtmlSelectElement",
        "HtmlTextAreaElement"]}
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1.7"
