[package]
name = "blog_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
tailwindcss-to-rust-macros = "0.1.2"
sycamore = {version = "0.8.0", features = ["suspense"]}
reqwasm = "0.4.0"
blog_model = {path = "../blog_model"}
web-sys = {version = "0.3.55", features = [
        "InputEvent", 
        "KeyboardEvent",
        "Location",
        "Storage",
        "HtmlSelectElement",
        "HtmlTextAreaElement"]}
anyhow = "1.0"
thiserror = "1"
url = { version = "2", features = ["serde"] }
ammonia = "3.2.1"
serde_json = "1.0.85"
serde_urlencoded = "0.7.1"
tracing-wasm = "0.2.1"
tracing = "0.1.36"
wasm-bindgen = "0.2.82"
time = { version = "0.3", features =["wasm-bindgen"]}
