[package]
name = "jubilant_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
futures-util = "0.3.19"
tokio = { version = "1", features = ["full"] }
config = {version = "0.11.0", features = ["toml"]}
r_ecipe_s_backend = { path = "../../r_ecipe_s/r_ecipe_s_backend" } 
env_logger = "0.9"
thiserror = "1.0.30"
log = "0.4"
axum = "0.5"
tower-http = {version = "0.2", features = ["fs", "trace"]}
tower = "0.4.12"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing = "0.1"
blog_backend = {path = "../blog_backend"}
# todo: get rid of this
sqlx = {version = "0.6", features = ["postgres", "time", "runtime-tokio-rustls"]}
